<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView_options"
    android:scrollbarStyle="outsideOverlay"
    tools:context="skilvit.fr.activites.OptionsActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp">


        <TextView
            android:id="@+id/option_fiches_visibles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_fiches_visibles"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_creation_situation"
            android:id="@+id/situation_checkbox"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_prise_medicament"
            android:id="@+id/pm_checkbox"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_activite_physique"
            android:id="@+id/ap_checkbox"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_nourriture"
            android:id="@+id/repas_checkbox"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_poids"
            android:id="@+id/poids_checkbox"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_glycemie"
            android:id="@+id/glycemie_checkbox"
            android:checked="false" />

        <CheckBox
            android:id="@+id/sommeil_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:checked="false"
            android:text="@string/title_activity_sommeil" />


        <TextView
            android:id="@+id/texte_adresse_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adresse_email"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/adresse_email_praticien_entree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/bouton_enregistrer_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/bouton_enregistrer" />

        <Button
            android:id="@+id/boutonr_retour_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_retour" />

    </LinearLayout>
</ScrollView>