
<ScrollView
    android:id="@+id/scrollView_menu"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".activites.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titre_accueil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titre_accueil"
            android:textStyle="bold" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bouton_consultation"
            android:clickable="true"
            android:enabled="true"
            android:nestedScrollingEnabled="false"
            android:text="@string/bou_consulter_situation"
            android:focusable="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nouvelle_situation"
            android:id="@+id/bouton_nouvelle_entree"
            android:enabled="true"
            android:clickable="true"
            android:focusable="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_dosage_medicament"
            android:id="@+id/bouton_dosage_medicament"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_activite_physique"
            android:id="@+id/bouton_actvite_physique"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_alimentation"
            android:id="@+id/bouton_alimentation"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_glycemie"
            android:id="@+id/bouton_glycemie"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_poids"
            android:id="@+id/bouton_poids"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_sommeil"
            android:id="@+id/bouton_sommeil"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bou_exporter_entrees"
            android:id="@+id/bouton_exporter_entrees"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_importer_entrees"
            android:id="@+id/bouton_importer_entrees"
            android:padding="5dp"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouon_options"
            android:id="@+id/bouton_options"
            android:enabled="true"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_notice"
            android:id="@+id/bouton_notice"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true" />
    </LinearLayout>
</ScrollView>

