<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:id="@+id/linearLayout_n_date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_date"
                android:id="@+id/label_date" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/date_entree"
                android:textSize="12sp"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_n_heure"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_heure"
                android:id="@+id/label_heure"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/heure_entree"
                android:textSize="12sp"
                android:autofillHints="" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/texte_repas"
            android:id="@+id/texte_repas"
            android:layout_gravity="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rg_nourriture"
            style="@style/option_style">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbutton_petit_dejeuner"
                android:id="@+id/checkbutton_petit_dejeuner" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbutton_dejeuner"
                android:id="@+id/checkbutton_dejeuner" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbutton_gouter"
                android:id="@+id/checkbutton_gouter" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbutton_diner"
                android:id="@+id/checkbutton_diner" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbutton_grignotage"
                android:id="@+id/checkbutton_grignotage" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/texte_nourriture"
            android:id="@+id/texte_nourriture"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entree_nourriture"
            android:layout_gravity="center"
            android:inputType="text" />


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/activer_modification_situation"
            android:id="@+id/bouton_activation_modification" />

        <Button
            android:id="@+id/bouton_enregistrer_modification"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/bouton_enregistrer_modification" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_suprimmer_entree"
            android:id="@+id/bouton_suprimmer_entree"
            android:enabled="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_entree_vers_liste"
            android:id="@+id/bouton_entree_vers_liste" />

    </LinearLayout>
</ScrollView>