<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="skilvit.fr.in_out.ExportationEntreesActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_exporter_entree_JSON"
        android:id="@+id/bouton_exporter_entree_JSON"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:clickable="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_exporter_entree_PDF"
        android:id="@+id/bouton_exporter_entree_PDF"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:clickable="true" />

    <Button
        android:id="@+id/bouton_exporter_format_texte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_exporter_txt" />

    <Button
        android:id="@+id/bouton_exporter_format_csv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_exporter_csv" />

    <Button
        android:id="@+id/bouton_envoyer_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/partager_email"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton_exportation_vers_accueil"
        android:id="@+id/bouton_exportation_vers_accueil"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
