
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView8"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="skilvit.fr.activites.AlimentationActivity"
    style="@style/option_style">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:id="@+id/linearLayout_n_date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_date"
                android:id="@+id/label_date" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/date_entree"
                android:textSize="12sp"
                android:autofillHints=""
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_n_heure"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_heure"
                android:id="@+id/label_heure"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/heure_entree"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/texte_repas"
                android:id="@+id/texte_repas"
                android:layout_gravity="center" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rg_nourriture"
                style="@style/option_style">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbutton_petit_dejeuner"
                    android:id="@+id/checkbutton_petit_dejeuner" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbutton_dejeuner"
                    android:id="@+id/checkbutton_dejeuner" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbutton_gouter"
                    android:id="@+id/checkbutton_gouter" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbutton_diner"
                    android:id="@+id/checkbutton_diner" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbutton_grignotage"
                    android:id="@+id/checkbutton_grignotage" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/texte_nourriture"
                android:id="@+id/texte_nourriture"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/entree_nourriture"
                android:layout_gravity="center"
                android:inputType="text"
                android:autofillHints="" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bouton_enregistrer"
                android:id="@+id/bouton_enregistrer"
                android:clickable="true"
                android:enabled="true"
                android:layout_gravity="center"
                android:focusable="true" />

            <Button
                android:id="@+id/bouton_liste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/afficher_liste_texte" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bouton_retour"
                android:id="@+id/bouton_retour"
                android:clickable="true"
                android:enabled="true"
                android:layout_gravity="center"
                android:focusable="true" />


        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/texte_derniere_al"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>